[package]
name = "file_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
salvo = { version = "0.37.7", features = ["anyhow"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10.5"
futures = "0.3"
flate2 = "1.0"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-recursion = "1.0.0"
clap = { version = "4.0.24", features = ["cargo"] }
